...
            android:id="@+id/add_refuel_layout_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/add_refuel_layout_milage"
            app:layout_constraintStart_toEndOf="@+id/add_refuel_layout_date"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/add_refuel_time"
                android:layout_width="match_parent"
...
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/add_refuel_text_unit_milage"
            app:layout_constraintStart_toEndOf="@+id/add_refuel_image_milage"
            app:layout_constraintTop_toBottomOf="@+id/add_refuel_layout_date">

            <EditText
                android:id="@+id/add_refuel_milage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_refuel_hint_milage"
                android:inputType="number"
                android:gravity="end"
                android:typeface="monospace"
...
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:weightSum="1"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/add_refuel_layout_price_per_litre"
            app:layout_constraintEnd_toStartOf="@+id/add_refuel_layout_price_per_litre"
            app:layout_constraintStart_toEndOf="@+id/add_refuel_image_gas_station"
            app:layout_constraintTop_toTopOf="@+id/add_refuel_layout_price_per_litre" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_refuel_layout_price_per_litre"
...
            android:weightSum="1"
            app:layout_constraintEnd_toStartOf="@+id/add_refuel_text_unit_milage"
            app:layout_constraintStart_toEndOf="@+id/add_refuel_gas_station_id"
            app:layout_constraintTop_toBottomOf="@+id/add_refuel_layout_milage">

            <EditText
                android:id="@+id/add_refuel_price_per_litre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:hint="@string/add_refuel_hint_price_per_litre"
                android:inputType="numberDecimal"
                tools:text="1.32" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/add_refuel_text_unit_price_per_litre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/add_refuel_layout_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/add_refuel_layout_price"
            app:srcCompat="@drawable/ic_local_atm_onbackground_24dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_refuel_layout_price"
...
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/add_refuel_text_unit_total_price"
            app:layout_constraintStart_toEndOf="@+id/add_refuel_image_volume"
            app:layout_constraintTop_toBottomOf="@+id/add_refuel_missed_refuel">

            <EditText
                android:id="@+id/add_refuel_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_refuel_hint_price"
                android:inputType="numberDecimal"
                android:gravity="end"
                tools:text="50.43" />
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/add_refuel_layout_volume"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/add_refuel_layout_volume"
            app:srcCompat="@drawable/ic_canister_onbackground_24dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_refuel_layout_volume"
...
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/add_refuel_text_unit_volume"
            app:layout_constraintStart_toStartOf="@+id/add_refuel_layout_price"
            app:layout_constraintTop_toBottomOf="@+id/add_refuel_layout_price">

            <EditText
                android:id="@+id/add_refuel_volume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_refuel_hint_volume"
                android:inputType="numberDecimal"
                android:gravity="end"
                tools:text="30.21" />
...
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/add_refuel_layout_volume"
            app:layout_constraintStart_toStartOf="@+id/add_refuel_text_unit_total_price"
            tools:text="L" />

        <Button
            android:id="@+id/add_refuel_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
...
